--- a/style.css
+++ b/style.css
@@ -5,12 +5,17 @@
 -------------------------------- */
 /* Colors
 -------------------------*/
+#css-zen-garden {
+  z-index: 0;
+  background: #000 url("https://image.ibb.co/mjnygo/stars.png") repeat top center;
+  position: absolute; }
+
 .page-wrapper {
-  width: 95%;
-  margin: 0 30px;
+  z-index: 1;
+  background: transparent url("https://image.ibb.co/ir1DE8/twinkling.png") repeat top center;
+  animation: move-twink-back 200s linear infinite;
   display: inline-flex;
   flex-flow: column;
-  background-color: #272727;
   text-align: center; }
   .page-wrapper h1, .page-wrapper h2, .page-wrapper h3, .page-wrapper h4, .page-wrapper h5, .page-wrapper h6 {
     font-family: "Source Code Pro", monospace; }
@@ -38,7 +43,6 @@ header {
 .summary {
   background-color: #d6c9c9;
   background-image: linear-gradient(#d6c9c9, #e8eef2);
-  width: 75%;
   padding: 20px;
   margin: 6%;
   text-align: center; }
@@ -57,8 +61,8 @@ header {
   position: absolute;
   border-radius: 50%;
   box-shadow: 0 0 60px -20px #c7d3dd, 0.72;
-  left: 50%;
-  top: 80%;
+  left: 35%;
+  top: 30%;
   animation: rotatePlanet 150s infinite linear; }
 @keyframes rotatePlanet {
   0% {
