--- a/style.scss
+++ b/style.scss
@@ -24,12 +24,18 @@ $alert: red; // red
 
 
 //body 
+
+#css-zen-garden{
+	z-index: 0;
+	background: #000 url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
+	position:absolute;
+}
 .page-wrapper {
-	width: 95%;
-	margin: 0 30px;
+	z-index: 1;
+	background:transparent url('https://image.ibb.co/ir1DE8/twinkling.png') repeat top center;
+	animation: move-twink-back 200s linear infinite;
 	display: inline-flex;
 	flex-flow: column;
-	background-color: $color-2;
 	text-align: center;
 	h1,h2,h3, h4,h5, h6 {
 		font-family: $secondary-font;
@@ -60,7 +66,6 @@ header {
 .summary{
 	background-color: $color-3;
 	background-image: linear-gradient($color-3,$color-6);
-	width: 75%;
 	padding: 20px;
 	margin: 6%;
 	text-align: center;
@@ -81,8 +86,8 @@ header {
   position:absolute;
   border-radius:50%;
   box-shadow: 0 0 60px -20px ($color-4, 0.72);
-  left:50%;
-  top:80%;
+  left:35%;
+  top:30%;
 	animation: rotatePlanet 150s infinite linear;
 	@keyframes rotatePlanet{
   0%{
