--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
   .page-wrapper p {
     font-family: "Roboto", sans-serif; }
 
+@keyframes move-twink-back {
+  from {
+    background-position: 0 0; }
+  to {
+    background-position: -10000px 5000px; } }
 .intro {
   width: 50%;
   margin: 0 auto;
@@ -61,9 +66,9 @@ header {
   position: absolute;
   border-radius: 50%;
   box-shadow: 0 0 60px -20px #c7d3dd, 0.72;
-  left: 35%;
   top: 30%;
   animation: rotatePlanet 150s infinite linear; }
+
 @keyframes rotatePlanet {
   0% {
     transform: rotateZ(0); }
