--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
 #css-zen-garden {
   z-index: 0;
   background: #000 url("https://image.ibb.co/mjnygo/stars.png") repeat top center;
-  position: absolute; }
+  position: absolute;
+  margin: 0 auto; }
 
 .page-wrapper {
   z-index: 1;
   background: transparent url("https://image.ibb.co/ir1DE8/twinkling.png") repeat top center;
-  animation: move-twink-back 200s linear infinite;
+  animation: twinkle 200s linear infinite;
   display: inline-flex;
   flex-flow: column;
   text-align: center; }
@@ -22,17 +23,11 @@
   .page-wrapper p {
     font-family: "Roboto", sans-serif; }
 
-@keyframes move-twink-back {
+@keyframes twinkle {
   from {
     background-position: 0 0; }
   to {
     background-position: -10000px 5000px; } }
-.intro {
-  width: 50%;
-  margin: 0 auto;
-  display: inline-flex;
-  flex-flow: column; }
-
 header {
   width: 80%;
   height: auto;
@@ -45,34 +40,79 @@ header {
   header h2 {
     font-size: 1.5em; }
 
-.summary {
-  background-color: #d6c9c9;
-  background-image: linear-gradient(#d6c9c9, #e8eef2);
-  padding: 20px;
-  margin: 6%;
-  text-align: center; }
-  .summary a {
-    color: #77b6ea;
-    text-decoration: none; }
-    .summary a a:active {
-      color: #e8eef2; }
-    .summary a a:hover {
-      color: #d6c9c9; }
-
-.preamble {
-  width: 400px;
-  height: 400px;
-  background-image: linear-gradient(#c7d3dd, #272727, #c7d3dd, #77b6ea, #c7d3dd, #272727, #e8eef2);
-  position: absolute;
-  border-radius: 50%;
-  box-shadow: 0 0 60px -20px #c7d3dd, 0.72;
-  top: 30%;
-  animation: rotatePlanet 150s infinite linear; }
+.intro {
+  width: 80%;
+  margin: 0 auto;
+  display: inline-flex;
+  flex-flow: column; }
+  .intro .summary {
+    background-color: #d6c9c9;
+    background-image: linear-gradient(#d6c9c9, #e8eef2);
+    padding: 20px;
+    margin: 6%;
+    text-align: center; }
+    .intro .summary a {
+      color: #77b6ea;
+      text-decoration: none; }
+      .intro .summary a a :active {
+        color: #e8eef2; }
+      .intro .summary a a :hover {
+        color: #d6c9c9; }
+  .intro .preamble {
+    width: 75vw;
+    height: 75vw;
+    margin: 0px auto;
+    background-image: linear-gradient(#c7d3dd, #272727, #c7d3dd, #77b6ea, #c7d3dd, #272727, #e8eef2);
+    overflow: hide;
+    border-radius: 50%;
+    padding: 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 0 60px -20px #FFFFFF, 0.72;
+    top: 30%;
+    animation: rotatePlanet 150s infinite linear; }
+    .intro .preamble h3 {
+      width: auto;
+      position: static;
+      word-wrap: break-word; }
+    .intro .preamble p {
+      position: relative;
+      word-wrap: break-word; }
 
 @keyframes rotatePlanet {
   0% {
     transform: rotateZ(0); }
   100% {
     transform: rotateZ(-360deg); } }
+.supporting {
+  color: blue;
+  padding: 4%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto; }
+
+@media screen and (min-width: 601px) {
+  .page-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr; }
+
+  .preamble {
+    width: 40vw;
+    height: 40vw; }
+
+  .intro {
+    grid-column: 2/span 1; }
+
+  .supporting {
+    grid-column: 3/span1; }
+
+  .sidebar {
+    grid-row: 1/span1; } }
 
 /*# sourceMappingURL=style.css.map */
