--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   margin: 0 auto; }
 
 .page-wrapper {
+  height: 100vh;
   z-index: 1;
   background: transparent url("https://image.ibb.co/ir1DE8/twinkling.png") repeat top center;
   animation: twinkle 200s linear infinite;
@@ -41,7 +42,6 @@ header {
     font-size: 1.5em; }
 
 .intro {
-  height: 100vh;
   width: 80%;
   margin: 0 auto;
   display: inline-flex;
@@ -65,8 +65,8 @@ header {
     width: 300px;
     height: 300px;
     margin: 0px auto;
-    background-image: linear-gradient(#c7d3dd, #272727, #c7d3dd, #77b6ea, #c7d3dd, #272727, #e8eef2);
-    overflow: hidden;
+    background-image: linear-gradient(#c7d3dd, #77b6ea, #c7d3dd, #e8eef2);
+    overflow: scroll;
     border-radius: 50%;
     padding: 10%;
     display: flex;
@@ -75,34 +75,48 @@ header {
     text-align: center;
     box-shadow: 0 0 60px -20px #FFFFFF, 0.72;
     top: 30%; }
-    .intro .preamble:before {
-      background-image: linear-gradient(#c7d3dd, #272727, #c7d3dd, #77b6ea, #c7d3dd, #272727, #e8eef2);
-      animation: rotatePlanet 50s infinite linear; }
     .intro .preamble h3 {
       width: 270px;
       position: relative;
-      word-wrap: break-word; }
+      word-wrap: break-word;
+      color: yellow;
+      font-size: 1.5em; }
     .intro .preamble p {
       position: relative;
       word-wrap: break-word; }
 
-@keyframes rotatePlanet {
-  0% {
-    transform: rotateZ(0); }
-  100% {
-    transform: rotateZ(-360deg); } }
 .supporting {
-  color: blue;
   padding: 4%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   width: 80%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  overflow: scroll;
+  animation: crawl 60s linear infinite; }
+  .supporting h3 {
+    width: 270px;
+    text-transform: uppercase;
+    position: relative;
+    word-wrap: break-word;
+    color: yellow; }
+  .supporting p {
+    position: relative;
+    word-wrap: break-word;
+    color: #FFFFFF; }
+  .supporting a {
+    color: red;
+    list-style-type: none;
+    text-decoration: none; }
+    .supporting a:active {
+      color: yellow; }
+    .supporting a:hover {
+      color: #77b6ea; }
 
 .sidebar {
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  margin-left: 150px; }
   .sidebar ul li {
     list-style-type: none; }
     .sidebar ul li a {
@@ -118,22 +132,21 @@ header {
   position: relative;
   top: -25px;
   height: 300px;
+  width: 150px;
   background-image: linear-gradient(0deg, transparent, black 60%);
   z-index: 1;
   box-shadow: #c7d3dd 20%;
   overflow: hiden; }
 
-.select, .archives, .resources {
+.select, .archives, .resources, .main-supporting {
   padding: 20px;
-  bacground-color: black;
   text-transform: uppercase;
   color: #FFFFFF; }
-  .select:before, .archives:before, .resources:before {
+  .select:before, .archives:before, .resources:before, .main-supporting:before {
     background-color: black;
     position: fixed; }
 
 .design-selection ul {
-  animation: crawl 10s linear infinite;
   color: #FFFFFF;
   overflow: hiden; }
 
@@ -151,6 +164,7 @@ header {
   text-align: justify; }
 
 ul {
+  padding: 20px;
   text-decoration: none;
   list-style-type: none; }
   ul a {
@@ -160,13 +174,19 @@ ul {
       color: #77b6ea; }
     ul a:hover {
       color: #77b6ea; }
+
 @keyframes crawl {
   0% {
     top: 10px;
-    transform: rotateX(0deg) translateZ(0); }
+    transform: rotateX(0deg) translateZ(10px); }
+  25% {
+    transform: rotateX(25deg) translateZ(550px); }
+  50% {
+    transform: rotateX(30deg) translateZ(1100px); }
+  75% {
+    transform: rotateX(35deg) translateZ(1650px); }
   100% {
-    top: 30px;
-    transform: rotateX(25deg) translateZ(600px); } }
+    transform: rotateX(40deg) translateZ(3000px); } }
 @media screen and (min-width: 601px) {
   .page-wrapper {
     display: grid;
