--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   margin: 0 auto; }
 
 .page-wrapper {
-  height: 100vh;
+  height: 100%;
   z-index: 1;
   background: transparent url("https://image.ibb.co/ir1DE8/twinkling.png") repeat top center;
   animation: twinkle 200s linear infinite;
@@ -64,37 +64,52 @@ header {
   .intro .preamble {
     width: 300px;
     height: 300px;
-    margin: 0px auto;
+    margin: 30px  auto;
     background-image: linear-gradient(#c7d3dd, #77b6ea, #c7d3dd, #e8eef2);
-    overflow: scroll;
+    overflow: hidden;
     border-radius: 50%;
     padding: 10%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     text-align: center;
-    box-shadow: 0 0 60px -20px #FFFFFF, 0.72;
-    top: 30%; }
+    box-shadow: 5px 5px 20px #c7d3dd; }
     .intro .preamble h3 {
-      width: 270px;
+      width: 280px;
       position: relative;
       word-wrap: break-word;
-      color: yellow;
-      font-size: 1.5em; }
+      text-transform: uppercase;
+      color: black;
+      font-weight: bold;
+      font-size: 1.5em;
+      animation: up 20s linear infinite; }
     .intro .preamble p {
       position: relative;
-      word-wrap: break-word; }
+      word-wrap: break-word;
+      animation: up 20s linear infinite; }
 
+@keyframes up {
+  0% {
+    top: 10px;
+    transform: rotateX(0deg) translateZ(0px); }
+  25% {
+    transform: rotateX(25deg) translateZ(75px); }
+  50% {
+    transform: rotateX(30deg) translateZ(15s0px); }
+  75% {
+    transform: rotateX(40deg) translateZ(220px); }
+  100% {
+    transform: rotateX(40deg) translateZ(220px); } }
 .supporting {
   padding: 4%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   overflow: scroll;
-  animation: crawl 60s linear infinite; }
+  box-shadow: 5px 5px 20px #c7d3dd; }
   .supporting h3 {
     width: 270px;
     text-transform: uppercase;
@@ -106,17 +121,18 @@ header {
     word-wrap: break-word;
     color: #FFFFFF; }
   .supporting a {
-    color: red;
+    color: #77b6ea;
     list-style-type: none;
     text-decoration: none; }
     .supporting a:active {
       color: yellow; }
     .supporting a:hover {
-      color: #77b6ea; }
+      color: #e8eef2; }
 
 .sidebar {
   color: #FFFFFF;
-  margin-left: 150px; }
+  margin-left: 150px;
+  margin-top: 40px; }
   .sidebar ul li {
     list-style-type: none; }
     .sidebar ul li a {
@@ -131,20 +147,15 @@ header {
 .design-selection, .design-archives, .zen-resources {
   position: relative;
   top: -25px;
-  height: 300px;
   width: 150px;
-  background-image: linear-gradient(0deg, transparent, black 60%);
+  background-image: linear-gradient(0deg, black 60%);
   z-index: 1;
-  box-shadow: #c7d3dd 20%;
   overflow: hiden; }
 
 .select, .archives, .resources, .main-supporting {
   padding: 20px;
   text-transform: uppercase;
   color: #FFFFFF; }
-  .select:before, .archives:before, .resources:before, .main-supporting:before {
-    background-color: black;
-    position: fixed; }
 
 .design-selection ul {
   color: #FFFFFF;
@@ -175,18 +186,6 @@ ul {
     ul a:hover {
       color: #77b6ea; }
 
-@keyframes crawl {
-  0% {
-    top: 10px;
-    transform: rotateX(0deg) translateZ(10px); }
-  25% {
-    transform: rotateX(25deg) translateZ(550px); }
-  50% {
-    transform: rotateX(30deg) translateZ(1100px); }
-  75% {
-    transform: rotateX(35deg) translateZ(1650px); }
-  100% {
-    transform: rotateX(40deg) translateZ(3000px); } }
 @media screen and (min-width: 601px) {
   .page-wrapper {
     display: grid;
@@ -198,16 +197,26 @@ ul {
       display: flex;
       flex-flow: column; }
 
-  .preamble {
-    width: 50vw;
-    height: 50vh; }
-
   .intro {
     grid-column: 2/span 1; }
 
   .supporting {
-    grid-column: 3/span1; }
+    grid-column: 3/span1;
+    border: none;
+    animation: crawl 60s linear infinite; }
 
+  @keyframes crawl {
+    0% {
+      top: 10px;
+      transform: rotateX(0deg) translateZ(10px); }
+    25% {
+      transform: rotateX(25deg) translateZ(550px); }
+    50% {
+      transform: rotateX(30deg) translateZ(1100px); }
+    75% {
+      transform: rotateX(35deg) translateZ(1650px); }
+    100% {
+      transform: rotateX(40deg) translateZ(3000px); } }
   .sidebar {
     grid-row: 1/span1; } }
 
